correction lien bootstrap et font awesome + contraste titre page 2

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a:hover {
 }
 
 .b-parallax {
-    background-attachment: scroll;
+    background-attachment: fixed;
 }
 
 .d-bloc {
